--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                     <img src="img/myResume.png" alt="slidebg1">
                 </div>
                 <div class="tp-caption main-title lfl" data-x="center" data-hoffset="0" data-y="250" data-speed="500" data-start="1500" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    Anthony Jones
+                    Clarix Coaching
                 </div>
                 <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="2000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    An ineractive web designer with the passion of creativity
+                    Helping successfull product innovators maximize their potential
                 </div>
             </li>
             <!-- SLIDE  -->
@@ -56,7 +56,7 @@
                     8 years experience
                 </div>
                 <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="2000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    In Creative web Design
+                    Launching Products to market and managing product teams
                 </div>
             </li>
             <!-- SLIDE  -->
@@ -67,10 +67,10 @@
                     <img src="img/camera.png" alt="slideimg">
                 </div>
                 <div class="tp-caption main-title lfl" data-x="center" data-hoffset="0" data-y="250" data-speed="500" data-start="1500" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    photography
+                    I specialized in 
                 </div>
                 <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="2000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    is my additional qualification
+                    Product People, Entrepreneurs and Healthech Innovators
                 </div>
             </li>
         </ul>
