--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <!-- MAIN IMAGE -->
                 <img src="img/banner1.jpg" alt="slidebg1" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">
                 <div class="tp-caption lft" data-x="center" data-hoffset="0" data-y="50" data-voffset="0" data-speed="800" data-start="700" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    <img src="" alt="slidebg1">
+                    <img src="myResume.png" alt="slidebg1">
                 </div>
                 <div class="tp-caption main-title lfl" data-x="center" data-hoffset="0" data-y="250" data-speed="500" data-start="1500" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
                     Clarix Coaching
@@ -48,9 +48,9 @@
             <!-- SLIDE  -->
             <li data-transition="fade" data-slotamount="5" data-masterspeed="700">
                 <!-- MAIN IMAGE -->
-                <img src="img/banner2.jpg" alt="slidebg1" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">
+                <img src="img/banner2.jpg" alt="" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">
                 <div class="tp-caption lft" data-x="center" data-hoffset="0" data-y="50" data-voffset="0" data-speed="800" data-start="700" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    <img src="" alt="slideimg">
+                    <img src="" alt="">
                 </div>
                 <div class="tp-caption main-title lfl" data-x="center" data-hoffset="0" data-y="250" data-speed="500" data-start="1500" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
                     8 years experience
@@ -62,9 +62,9 @@
             <!-- SLIDE  -->
             <li data-transition="fade" data-slotamount="5" data-masterspeed="700">
                 <!-- MAIN IMAGE -->
-                <img src="img/banner3.jpg" alt="slidebg1" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">
+                <img src="img/banner3.jpg" alt="" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">
                 <div class="tp-caption lft" data-x="center" data-hoffset="0" data-y="50" data-voffset="0" data-speed="800" data-start="700" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    <img src="" alt="slideimg">
+                    <img src="" alt="">
                 </div>
                 <div class="tp-caption main-title lfl" data-x="center" data-hoffset="0" data-y="250" data-speed="500" data-start="1500" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
                     I specialize in 
