--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <!-- SLIDE  -->
             <li data-transition="fade" data-slotamount="5" data-masterspeed="700">
                 <!-- MAIN IMAGE -->
-                <img src="img/banner1.jpg" alt="slidebg1" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">
+                <img src="img/banner1.jpg" alt="" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">
                 <div class="tp-caption lft" data-x="center" data-hoffset="0" data-y="50" data-voffset="0" data-speed="800" data-start="700" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
                     <img src="myResume.png" alt="slidebg1">
                 </div>
@@ -42,7 +42,7 @@
                     Clarix Coaching
                 </div>
                 <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="2000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    Helping successfull product people maximize their potential
+                    Helping successful product people maximize their potential
                 </div>
             </li>
             <!-- SLIDE  -->
