--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <!-- MAIN IMAGE -->
                 <img src="img/banner1.jpg" alt="" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">
                 <div class="tp-caption lft" data-x="center" data-hoffset="0" data-y="50" data-voffset="0" data-speed="800" data-start="700" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    <img src="myResume.png" alt="slidebg1">
+                    <img src="myResume.png" alt="">
                 </div>
                 <div class="tp-caption main-title lfl" data-x="center" data-hoffset="0" data-y="250" data-speed="500" data-start="1500" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
                     Clarix Coaching
