--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
                         <div class="navbar-collapse collapse ddsmoothmenu" id="smoothmenu1">
                             <ul class="nav navbar-nav pull-right top-nav sf-menu">
                                 <li><a href="#slides">Home</a></li>
-                                <li><a href="#about-me">About Me</a></li>
-                                <li><a href="#skill-section">Skill</a></li>
+                                <li><a href="#about-me">About</a></li>
+                                <li><a href="#skill-section">Skills</a></li>
                                 <li><a href="#experiences">Experiences</a></li>
                                 <li><a href="#education">Education</a></li>
-                                <li><a href="#portfolio">Portfolio</a></li>
+                                <li><a href="#portfolio">Health App</a></li>
                                 <li><a href="#testimonial">Testimonial</a></li>
                                 <li><a href="#blog">Blog</a>
                                     <ul>
