--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         images:     images,
         timeout:    20,
         showInfo:   true,
-        background: ['#33ccff']
+        background: ['##0a92a4']
     });
 </script>
 <!-- Bootstrap v3.1.0-->
