added copyright section

--- a/index.html
+++ b/index.html
@@ -163,6 +163,17 @@
 </div>
 <div class="clear">
 </div>
+<div>
+    <div class="copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    &copy; 2021 Clarix Coaching and Innovation. All Rights Reserved.
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 <!--section contact end-->
@@ -183,8 +194,8 @@
     Royal_Preloader.config({
         mode:       'number',
         images:     images,
-        timeout:    20,
-        showInfo:   true,
+        timeout:    1,
+        showInfo:   false,
         background: ['#0a92a4']
     });
 </script>
