--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 </div>
 <div class="clear">
 </div>
-<div>
+<div class="section-contact">
     <div class="copyright">
         <div class="container">
             <div class="row">
@@ -182,20 +182,20 @@
 <script src="js/royal_preloader.js"></script>
 <script type="text/javascript">
     var images = {
-        'Banner One':     'http://rxhtml.themebucket.net/img/banner1.jpg',
-        'Banner Two':     'http://rxhtml.themebucket.net/img/banner2.jpg',
-        'Banner Three':     'http://rxhtml.themebucket.net/img/banner3.jpg',
-        'Theme Bucket':  'http://rxhtml.themebucket.net/img/p1.jpg',
-        'About Me':     'http://rxhtml.themebucket.net/img/about-bg.jpg',
-        'Experience':   'http://rxhtml.themebucket.net/img/experience-bg.jpg',
-        'Connect Monitor': 'http://rxhtml.themebucket.net/img/connect-monitor.png'
+        'Power questions':     'http://rxhtml.themebucket.net/img/banner1.jpg',
+        'Goals':     'http://rxhtml.themebucket.net/img/banner2.jpg',
+        'Plans':     'http://rxhtml.themebucket.net/img/banner3.jpg',
+        'Actions':  'http://rxhtml.themebucket.net/img/p1.jpg',
+        'Challenges':     'http://rxhtml.themebucket.net/img/about-bg.jpg',
+        'Vision':   'http://rxhtml.themebucket.net/img/experience-bg.jpg',
+        'Loading Clarity': 'http://rxhtml.themebucket.net/img/connect-monitor.png'
     };
     // config
     Royal_Preloader.config({
         mode:       'number',
         images:     images,
-        timeout:    1,
-        showInfo:   false,
+        timeout:    15,
+        showInfo:   true,
         background: ['#0a92a4']
     });
 </script>
