--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                     <img src="" alt="">
                 </div>
                 <div class="tp-caption main-title lfl" data-x="center" data-hoffset="0" data-y="250" data-speed="500" data-start="1500" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    10 years experience
+                    Clarity of action
                 </div>
                 <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="2000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    Launching Products to market and managing product teams
+                    For PMs and Innovators in Health Teach
                 </div>
             </li>
             <!-- SLIDE  -->
@@ -67,10 +67,10 @@
                     <img src="" alt="">
                 </div>
                 <div class="tp-caption main-title lfl" data-x="center" data-hoffset="0" data-y="250" data-speed="500" data-start="1500" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    I specialize in 
+                    10 Years Agile and Executive Coaching Experience
                 </div>
                 <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="2000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    Product People, Entrepreneurs and Healthech Innovators
+                    Helping product people become the best version they can be 
                 </div>
             </li>
         </ul>
@@ -182,19 +182,19 @@
 <script src="js/royal_preloader.js"></script>
 <script type="text/javascript">
     var images = {
-        'Power questions':     'http://rxhtml.themebucket.net/img/banner1.jpg',
-        'Goals':     'http://rxhtml.themebucket.net/img/banner2.jpg',
-        'Plans':     'http://rxhtml.themebucket.net/img/banner3.jpg',
-        'Actions':  'http://rxhtml.themebucket.net/img/p1.jpg',
-        'Challenges':     'http://rxhtml.themebucket.net/img/about-bg.jpg',
-        'Vision':   'http://rxhtml.themebucket.net/img/experience-bg.jpg',
+        'Loading Vision':   'http://rxhtml.themebucket.net/img/experience-bg.jpg',
+        'Loading Power questions':     'http://rxhtml.themebucket.net/img/banner1.jpg',
+        'Loading Goals':     'http://rxhtml.themebucket.net/img/banner2.jpg',
+        'Plans and Actions':     'http://rxhtml.themebucket.net/img/banner3.jpg',
+        'Loading NLP':  'http://rxhtml.themebucket.net/img/p1.jpg',
+        'Loading Challenges':     'http://rxhtml.themebucket.net/img/about-bg.jpg',
         'Loading Clarity': 'http://rxhtml.themebucket.net/img/connect-monitor.png'
     };
     // config
     Royal_Preloader.config({
         mode:       'number',
         images:     images,
-        timeout:    15,
+        timeout:    30,
         showInfo:   true,
         background: ['#0a92a4']
     });
