changes to croussel

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     Clarix Coaching
                 </div>
                 <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="2000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    Helping successful product people maximize their potential
+                    Combining Agile and Executive Coaching to help product people maximize their potential 
                 </div>
             </li>
             <!-- SLIDE  -->
@@ -56,7 +56,7 @@
                     Clarity of action
                 </div>
                 <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="2000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    For PMs and Innovators in Health Teach
+                    For PMs and Innovators in Health Teach to become successful
                 </div>
             </li>
             <!-- SLIDE  -->
@@ -67,10 +67,10 @@
                     <img src="" alt="">
                 </div>
                 <div class="tp-caption main-title lfl" data-x="center" data-hoffset="0" data-y="250" data-speed="500" data-start="1500" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    10 Years Agile and Executive Coaching Experience
+                    How Can I help?
                 </div>
                 <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="2000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    Helping product people become the best version they can be 
+                    Scroll down and drop me a line 
                 </div>
             </li>
         </ul>
@@ -182,19 +182,20 @@
 <script src="js/royal_preloader.js"></script>
 <script type="text/javascript">
     var images = {
-        'Loading Vision':   'http://rxhtml.themebucket.net/img/experience-bg.jpg',
-        'Loading Power questions':     'http://rxhtml.themebucket.net/img/banner1.jpg',
-        'Loading Goals':     'http://rxhtml.themebucket.net/img/banner2.jpg',
-        'Plans and Actions':     'http://rxhtml.themebucket.net/img/banner3.jpg',
-        'Loading NLP':  'http://rxhtml.themebucket.net/img/p1.jpg',
-        'Loading Challenges':     'http://rxhtml.themebucket.net/img/about-bg.jpg',
-        'Loading Clarity': 'http://rxhtml.themebucket.net/img/connect-monitor.png'
+        'Loading Vision':   '',
+        'Power questions':     '',
+        'Loading Goals':     '',
+        'Plans and Actions':     '',
+        'Loading NLP':  '',
+        'Challenges':     '',
+        'Carity':     '',
+        'Loading Clarix': ''
     };
     // config
     Royal_Preloader.config({
         mode:       'number',
         images:     images,
-        timeout:    100,
+        timeout:    10,
         showInfo:   true,
         background: ['#0a92a4']
     });
