--- a/index.html
+++ b/index.html
@@ -182,20 +182,20 @@
 <script src="js/royal_preloader.js"></script>
 <script type="text/javascript">
     var images = {
-        'Loading Vision':   '',
-        'Power questions':     '',
-        'Loading Goals':     '',
-        'Plans and Actions':     '',
-        'Loading NLP':  '',
-        'Challenges':     '',
-        'Carity':     '',
-        'Loading Clarix': ''
+        'Loading Vision':   'https://rxhtml.themebucket.net/img/banner1.jpg',
+        'Power questions':     'https://rxhtml.themebucket.net/img/banner1.jpg',
+        'Loading Goals':     'https://rxhtml.themebucket.net/img/banner1.jpg',
+        'Plans and Actions':     'https://rxhtml.themebucket.net/img/banner1.jpg',
+        'Loading NLP':  'https://rxhtml.themebucket.net/img/banner1.jpg',
+        'Challenges':     'https://rxhtml.themebucket.net/img/banner1.jpg',
+        'Carity':     'https://rxhtml.themebucket.net/img/banner1.jpg',
+        'Loading Clarix': 'https://rxhtml.themebucket.net/img/banner1.jpg'
     };
     // config
     Royal_Preloader.config({
         mode:       'number',
         images:     images,
-        timeout:    10,
+        timeout:    20,
         showInfo:   true,
         background: ['#0a92a4']
     });
