many changes loader fixed

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                     Clarix Coaching
                 </div>
                 <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="2000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    Combining Agile and Executive Coaching to help product people maximize their potential 
+                    Combining Agile and Executive Coaching to help </br>
+                    product people maximize their potential 
                 </div>
             </li>
             <!-- SLIDE  -->
@@ -56,7 +57,7 @@
                     Clarity of action
                 </div>
                 <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="2000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    For PMs and Innovators in Health Teach to become successful
+                    For PMs and Innovators in Health Teach
                 </div>
             </li>
             <!-- SLIDE  -->
@@ -137,10 +138,13 @@
                         <h2 class="section-subheading about" data-wow-duration="1s" data-wow-delay=".2s">CLARIX COACHING - <span>Executive coaching applied to the product world</span></h2>
                         <div class="text about" data-wow-duration="1s" data-wow-delay=".4s">
                             <p>
-                                I have worked in Seattle, London and Madrid helping teams maximize their full potential, taking products from inception to market and building outcome based roadmaps.
+                                My names is Andres. I have worked in Seattle, London and Madrid helping teams maximize their full potential, taking products from inception to market and building outcome based roadmaps.
                             </p>
                             <p>
-                                I combine Executive Coaching with Agile Coaching to enhance individuals and teams performance.
+                                I combine Executive Coaching with Agile frameworks to enhance individuals and teams performance. I specialize in Product People, Designers, Developers and CEOs within the Health and Tech Industries
+                            </p>
+                            <p>
+                                I also offer product mentorship and consultancy services to help you create a disruptive product startegy. 
                             </p>
                         </div>
                         <!--
@@ -182,13 +186,13 @@
 <script src="js/royal_preloader.js"></script>
 <script type="text/javascript">
     var images = {
-        'Loading Vision':   'https://rxhtml.themebucket.net/img/banner1.jpg',
-        'Power questions':     'https://rxhtml.themebucket.net/img/banner1.jpg',
-        'Loading Goals':     'https://rxhtml.themebucket.net/img/banner1.jpg',
-        'Plans and Actions':     'https://rxhtml.themebucket.net/img/banner1.jpg',
-        'Loading NLP':  'https://rxhtml.themebucket.net/img/banner1.jpg',
-        'Challenges':     'https://rxhtml.themebucket.net/img/banner1.jpg',
-        'Loading Clarix': 'https://rxhtml.themebucket.net/img/banner1.jpg'
+        'Actions':     'https://rxhtml.themebucket.net/img/banner1.jpg',
+        'Clarity':     'http://rxhtml.themebucket.net/img/banner2.jpg',
+        'Agile':     'http://rxhtml.themebucket.net/img/banner3.jpg',
+        'Coaching':  'http://rxhtml.themebucket.net/img/p1.jpg',
+        'Power Questions':     'http://rxhtml.themebucket.net/img/about-bg.jpg',
+        'Goals':   'http://rxhtml.themebucket.net/img/experience-bg.jpg',
+        'Vision': 'http://rxhtml.themebucket.net/img/connect-monitor.png'
     };
     // config
     Royal_Preloader.config({
