--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 <div class="tp-caption main-title lfl" data-x="center" data-hoffset="0" data-y="250" data-speed="500" data-start="1500" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
                     Clarix Coaching
                 </div>
-                <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="2000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    Combining Agile and Executive Coaching to help </br>
-                    product people maximize their potential 
+                <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="4000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn"><center>
+                    Combining Agile and Executive Coaching to help </br></br>
+                    product people maximize their potential</center>
                 </div>
             </li>
             <!-- SLIDE  -->
