--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                     <img src="img/myResume.png" alt="">
                 </div>
                 <div class="tp-caption main-title lfl" data-x="center" data-hoffset="0" data-y="250" data-speed="500" data-start="1500" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    Clarix Coaching
+                    Clarix
                 </div>
                 <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="4000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn"><center>
-                    Combining Agile and Executive Coaching to help </br></br>
+                    Agile and Executive Coaching to help </br></br>
                     product people maximize their potential</center>
                 </div>
             </li>
@@ -54,10 +54,10 @@
                     <img src="" alt="">
                 </div>
                 <div class="tp-caption main-title lfl" data-x="center" data-hoffset="0" data-y="250" data-speed="500" data-start="1500" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    Clarity of action
+                    Mentorship
                 </div>
                 <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="2000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    For PMs and Innovators in Health Teach
+                    For innovators in Health Teach who want to apply.
                 </div>
             </li>
             <!-- SLIDE  -->
@@ -138,7 +138,7 @@
                         <h2 class="section-subheading about" data-wow-duration="1s" data-wow-delay=".2s">CLARIX COACHING - <span>Executive coaching applied to the product world</span></h2>
                         <div class="text about" data-wow-duration="1s" data-wow-delay=".4s">
                             <p>
-                                My names is Andres. I have worked in Seattle, London and Madrid helping teams maximize their full potential, taking products from inception to market and building outcome based roadmaps.
+                                Over 10 years of experience in Seattle and London helping companies take  products from inception to market. 
                             </p>
                             <p>
                                 I combine Executive Coaching with Agile frameworks to enhance individuals and teams performance. I specialize in Product People, Designers, Developers and CEOs within the Health and Tech Industries
