--- a/index.html
+++ b/index.html
@@ -100,12 +100,11 @@
                         <div class="navbar-collapse collapse ddsmoothmenu" id="smoothmenu1">
                             <ul class="nav navbar-nav pull-right top-nav sf-menu">
                                 <li><a href="#slides">Home</a></li>
-                                <li><a href="#about-me">About</a></li>
-                                <li><a href="#skill-section">Skills</a></li>
-                                <li><a href="#experiences">Experiences</a></li>
+                                <li><a href="#Consultancy">Consultancy</a></li>
+                                <li><a href="#Coaching">Coaching</a></li>
+                                <li><a href="#Mentoring">Mentoring</a></li>
                                 <li><a href="#education">Education</a></li>
-                                <li><a href="#portfolio">Health App</a></li>
-                                <li><a href="#testimonial">Testimonial</a></li>
+                                <li><a href="https://sites.google.com/view/victusapp/home">Health App</a></li>
                                 <li><a href="#blog">Blog</a>
                                     <ul>
                                         <li><a href="#blog">Blog List</a></li>
