--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+    <meta https-equiv="Content-Type" content="text/html;charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link href="css/bootstrap.css" type="text/css" rel="stylesheet">
@@ -24,8 +24,8 @@
     <link href="css/style-responsive.css" type="text/css" rel="stylesheet">
     <link href="css/apps-reset.css" type="text/css" rel="stylesheet">
     <link href="css/blue-theme.css" type="text/css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:900,300,200,100' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:900,300,200,100' rel='stylesheet' type='text/css'>
 </head>
 <body class="royal_loader">
 <div class="tp-banner-container" id="slides">
@@ -186,12 +186,12 @@
 <script type="text/javascript">
     var images = {
         'Actions':     'https://rxhtml.themebucket.net/img/banner1.jpg',
-        'Clarity':     'http://rxhtml.themebucket.net/img/banner2.jpg',
-        'Agile':     'http://rxhtml.themebucket.net/img/banner3.jpg',
-        'Coaching':  'http://rxhtml.themebucket.net/img/p1.jpg',
-        'Power Questions':     'http://rxhtml.themebucket.net/img/about-bg.jpg',
-        'Goals':   'http://rxhtml.themebucket.net/img/experience-bg.jpg',
-        'Vision': 'http://rxhtml.themebucket.net/img/connect-monitor.png'
+        'Clarity':     'https://rxhtml.themebucket.net/img/banner2.jpg',
+        'Agile':     'https://rxhtml.themebucket.net/img/banner3.jpg',
+        'Coaching':  'https://rxhtml.themebucket.net/img/p1.jpg',
+        'Power Questions':     'https://rxhtml.themebucket.net/img/about-bg.jpg',
+        'Goals':   'https://rxhtml.themebucket.net/img/experience-bg.jpg',
+        'Vision': 'https://rxhtml.themebucket.net/img/connect-monitor.png'
     };
     // config
     Royal_Preloader.config({
