--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     Mentorship
                 </div>
                 <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="2000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    For innovators in Health Teach who want to apply.
+                    For innovators in Health Teach to apply lean product approach.
                 </div>
             </li>
             <!-- SLIDE  -->
@@ -100,11 +100,11 @@
                         <div class="navbar-collapse collapse ddsmoothmenu" id="smoothmenu1">
                             <ul class="nav navbar-nav pull-right top-nav sf-menu">
                                 <li><a href="#slides">Home</a></li>
-                                <li><a href="#Consultancy">Consultancy</a></li>
+                                <li><a href="#Product Management">Consultancy</a></li>
                                 <li><a href="#Coaching">Coaching</a></li>
                                 <li><a href="#Mentoring">Mentoring</a></li>
-                                <li><a href="#education">Education</a></li>
-                                <li><a href="https://sites.google.com/view/victusapp/home">Health App</a></li>
+                                <li><a href="#Education">Education</a></li>
+                                <li><a href="https://sites.google.com/view/victusapp/home">Health Apps</a></li>
                                 <li><a href="#blog">Blog</a>
                                 </li>
                                 <li><a href="#contact">Contact</a></li>
@@ -132,13 +132,13 @@
                         <h2 class="section-subheading about" data-wow-duration="1s" data-wow-delay=".2s">CLARIX COACHING - <span>Executive coaching applied to the product world</span></h2>
                         <div class="text about" data-wow-duration="1s" data-wow-delay=".4s">
                             <p>
-                                Over 10 years of experience in Seattle and London helping companies take  products from inception to market. 
+                                10 years of experience in Seattle and London helping companies take products from inception to market. 
                             </p>
                             <p>
-                                I combine Executive Coaching with Agile frameworks to enhance individuals and teams performance. I specialize in Product People, Designers, Developers and CEOs within the Health and Tech Industries
+                                I combine Executive Coaching with Agile frameworks to maximize individuals and teams performance. I specialize in Product People, Designers, Developers and CEOs within the Health and Tech Industries
                             </p>
                             <p>
-                                I also offer product mentorship and consultancy services to help you create a disruptive product startegy. 
+                                I also offer product mentorship, consultancy and hands on product management services to help you create a disruptive product startegy. 
                             </p>
                         </div>
                         <!--
