--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                     Mentorship
                 </div>
                 <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="2000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    For innovators in Health Teach to apply lean product approach.
+                    For innovators in Health Teach </br> </br>
+                    to apply lean product approach.
                 </div>
             </li>
             <!-- SLIDE  -->
@@ -123,7 +124,7 @@
             <div class="row">
                 <div class="col-md-5">
                     <div class="about-img wow fadeInUpBig">
-                        <img src="img/p1.jpg" alt="">
+                        <img src="img/p1.jpg" alt="Me" height="400">
                     </div>
                 </div>
                 <div class="col-md-7">
