--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
                     Clarix
                 </div>
                 <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="4000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn"><center>
-                    Agile and Executive Coaching to help </br></br>
-                    product people maximize their potential</center>
+                Agile and Executive Coaching
+                 </br></br>
+                For product people </br></br>
+                To maximize their potential</center>
                 </div>
             </li>
             <!-- SLIDE  -->
