--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
                     Clarix
                 </div>
                 <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="4000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn"><center>
+                </br></br></br>
                 Agile and Executive Coaching
-                 </br></br>
-                For product people </br></br>
+                </br></br></br>
+                For product people </br></br></br>
                 To maximize their potential</center>
                 </div>
             </li>
@@ -59,8 +60,8 @@
                     Mentorship
                 </div>
                 <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="2000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    For innovators in Health Teach </br> </br>
-                    to apply lean product approach.
+                    For health tech innovators </br> </br> </br>
+                    to apply lean product management </br> </br> </br>
                 </div>
             </li>
             <!-- SLIDE  -->
@@ -71,10 +72,10 @@
                     <img src="" alt="">
                 </div>
                 <div class="tp-caption main-title lfl" data-x="center" data-hoffset="0" data-y="250" data-speed="500" data-start="1500" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    How Can I help?
+                How Can I help?
                 </div>
                 <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="2000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
-                    Scroll down and drop me a line 
+                Scroll down and drop me a line 
                 </div>
             </li>
         </ul>
