--- a/index.html
+++ b/index.html
@@ -41,12 +41,14 @@
                 <div class="tp-caption main-title lfl" data-x="center" data-hoffset="0" data-y="250" data-speed="500" data-start="1500" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
                     Clarix
                 </div>
-                <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="4000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn"><center>
+                <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="4000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
+                <center>
                 </br></br></br>
                 Agile and Executive Coaching
                 </br></br></br>
                 For product people </br></br></br>
-                To maximize their potential</center>
+                To maximize their potential
+                </center>
                 </div>
             </li>
             <!-- SLIDE  -->
@@ -60,8 +62,12 @@
                     Mentorship
                 </div>
                 <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="2000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
+                <center>
+                    </br></br></br>
+                    </br> </br> </br>
                     For health tech innovators </br> </br> </br>
                     to apply lean product management </br> </br> </br>
+                </center>
                 </div>
             </li>
             <!-- SLIDE  -->
@@ -75,7 +81,10 @@
                 How Can I help?
                 </div>
                 <div class="tp-caption info-title lfr" data-x="center" data-hoffset="0" data-y="300" data-voffset="0" data-speed="500" data-start="2000" data-easing="Power4.easeOut" data-endspeed="1000" data-endeasing="Power1.easeIn">
+                <center>
+                </br></br></br>
                 Scroll down and drop me a line 
+                </center>
                 </div>
             </li>
         </ul>
