--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 </br></br></br>
                 Agile and Executive Coaching
                 </br></br></br>
-                For product people </br></br></br>
-                To maximize their potential
+                for product people </br></br></br>
+                to maximize their potential
                 </center>
                 </div>
             </li>
@@ -66,7 +66,7 @@
                     </br></br></br>
                     </br> </br> </br>
                     For health tech innovators </br> </br> </br>
-                    to apply lean product management </br> </br> </br>
+                    to apply product management </br> </br> </br>
                 </center>
                 </div>
             </li>
