--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 </div>
 <!-- about me section end-->
 <!--skill section start -->
-<div class="section-skill appear" id="Product Management">
+<div class="section-skill appear" id="product management">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
