--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="section-title">
-                    <h1 class="section-heading" data-scrollreveal="enter left">AS A PRODUCT MANAGER</h1>
+                    <h1 class="section-heading" data-scrollreveal="enter left">PRODUCT MANAGMENT SKILLS</h1>
                     <h2 class="section-subheading-nobg" data-scrollreveal="enter left">Available for contracting opportunities</h2>
                 </div>
             </div>
