--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
                 </div>
                 <div class="col-md-7">
                     <div class="content">
-                        <h1 class="section-heading " data-wow-duration="1s" data-wow-delay="0s">ABOUT ME</h1>
-                        <h2 class="section-subheading about" data-wow-duration="1s" data-wow-delay=".2s">CLARIX COACHING - <span>Executive coaching applied to the product world</span></h2>
+                        <h1 class="section-heading " data-wow-duration="1s" data-wow-delay="0s">WHAT I OFFER</h1>
+                        <h2 class="section-subheading about" data-wow-duration="1s" data-wow-delay=".2s"><span>Executive coaching applied to the product world</span></h2>
                         <div class="text about" data-wow-duration="1s" data-wow-delay=".4s">
                             <p>
                                 10 years of experience in Seattle and London helping companies take products from inception to market. 
                             </p>
                             <p>
-                                I combine Executive Coaching with Agile frameworks to maximize individuals and teams performance. I specialize in Product People, Designers, Developers and CEOs within the Health and Tech Industries
+                                I combine Executive Coaching with Agile frameworks to maximize the potential of individuals and teams. I specialize in Product People, Designers, Developers and CEOs within the Health and Tech Industries
                             </p>
                             <p>
                                 I also offer product mentorship, consultancy and hands on product management services to help you create a disruptive product startegy. 
