--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
         -->
         <div class="section-title">
             <h1 class="section-heading">PORTFOLIO</h1>
-            <h2 class="section-subheading-nobg">previous associations that helped to gain experience</h2>
+            <h2 class="section-subheading-nobg">Products I've worked on: </h2>
         </div>
     </div>
 </div>
