--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                 <li><a href="#product management">Product Management</a></li>
                                 <li><a href="#experience">Experience</a></li>
                                 <li><a href="#portfolio">Portfolio</a></li>
-                                <li><a href="https://sites.google.com/view/victusapp/home">Health App</a></li>
+                                <!--<li><a href="https://sites.google.com/view/victusapp/home">Health App</a></li>-->
                                 <li><a href="#education">Education</a></li>
                                 <li><a href="#blog">Blog</a></li>
                                 <li><a href="#contact">Contact</a></li>
